--- a/index.html
+++ b/index.html
@@ -553,7 +553,8 @@ li.innerHTML = `<strong>${e.username}</strong><strong>${e.score}</strong>`;
       muteBtnHome.src = currentMuteIcon();
       muteBtnHome.addEventListener('click', () => {
         if (window.muteIcon) window.muteIcon.setTexture(isMuted ? 'iconUnmute' : 'iconMute');
-        muteBtnHome.src = 'assets/' + (isMuted ? 'icon-unmute.svg' : 'icon-mute.svg');
+        if (window.muteIcon) window.muteIcon.setTexture(isMuted ? 'iconUnmute' : 'iconMute');
+        muteBtnHome.src = currentMuteIcon();
         isMuted = !isMuted;
         muteBtnHome.src = currentMuteIcon();
         if (window.game && window.game.sound) {
