--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ li.innerHTML = `<strong>${e.username}</strong><strong>${e.score}</strong>`;
     let scoreText,pauseIcon,pauseOverlay,countdownText;
     let sfx={}, isMuted=false;
     const muteBtnHome = document.getElementById('muteToggleHome');
-    if (muteBtnHome) muteBtnHome.src = 'assets/' + (isMuted ? 'icon-unmute.svg' : 'icon-mute.svg');
+    if (muteBtnHome) muteBtnHome.src = 'assets/' + (isMuted ? 'icon-mute.svg' : 'icon-unmute.svg');
     const currentMuteIcon = () => isMuted ? 'assets/icon-unmute.svg' : 'assets/icon-mute.svg';
     if (muteBtnHome) {
       muteBtnHome.src = currentMuteIcon();
@@ -659,7 +659,7 @@ bestScoreText=this.add.text(16,64,'Best: '+highScore,{
       if (!window.muteIcon) window.muteIcon = muteIcon;
       muteIcon.setTexture(isMuted ? 'iconMute' : 'iconUnmute');
       if (document.getElementById('muteToggleHome')) {
-        document.getElementById('muteToggleHome').src = 'assets/' + (isMuted ? 'icon-unmute.svg' : 'icon-mute.svg');
+        document.getElementById('muteToggleHome').src = 'assets/' + (isMuted ? 'icon-mute.svg' : 'icon-unmute.svg');
       }
       if (document.getElementById('muteToggleHome')) document.getElementById('muteToggleHome').src = 'assets/' + (isMuted ? 'icon-unmute.svg' : 'icon-mute.svg');
       if (document.getElementById('muteToggleHome')) {
@@ -669,7 +669,7 @@ bestScoreText=this.add.text(16,64,'Best: '+highScore,{
       if (!window.muteIcon) window.muteIcon = muteIcon;
       muteIcon.setTexture(isMuted ? 'iconMute' : 'iconUnmute');
       if (document.getElementById('muteToggleHome')) {
-        document.getElementById('muteToggleHome').src = 'assets/' + (isMuted ? 'icon-unmute.svg' : 'icon-mute.svg');
+        document.getElementById('muteToggleHome').src = 'assets/' + (isMuted ? 'icon-mute.svg' : 'icon-unmute.svg');
       }
       if (document.getElementById('muteToggleHome')) document.getElementById('muteToggleHome').src = 'assets/' + (isMuted ? 'icon-unmute.svg' : 'icon-mute.svg');
       if (document.getElementById('muteToggleHome')) {
