--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
    </div>
   </div>
   <div id="game-over-screen" style="flex-direction: column; align-items: center; justify-content: center; gap: 2rem; z-index: 3;">
-   <h1 style="color: #fff; font-size: 4rem; p0; text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.6px #0F3D75;">
+   <h1 style="color: #fff; font-size: 4rem;  text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.6px #0F3D75;">
     GAME OVER
    </h1>
    <div class="result-wrapper">
     <div class="orb-bg" style="display:none;">
     </div>
-    <div class="results" style="color: #fff; font-size: 2rem; p0; text-align: center;text-shadow: 0 0 4px #000; text-transform: uppercase;">
+    <div class="results" style="color: #fff; font-size: 2rem;  text-align: center;text-shadow: 0 0 4px #000; text-transform: uppercase;">
      SCORE:
      <span id="finalScore">
       0
@@ -97,7 +97,7 @@
     </div>
    </div>
    
-<div id="rankMessage" style="font-size: 1.6rem; p0; color: #fff; text-align: center; text-shadow: 0 0 4px #000;">
+<div id="rankMessage" style="font-size: 1.6rem;  color: #fff; text-align: center; text-shadow: 0 0 4px #000;">
 </div>
 
   <button class="btn-primary" id="homeBtn">
