removed redundant mutes

--- a/index.html
+++ b/index.html
@@ -1,112 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <script src="https://sdk.minepi.com/pi-sdk.js">
-  </script>
-  
-  <meta charset="utf-8"/>
-  <meta content="width=device-width,initial-scale=1" name="viewport"/>
-  <title>
-   Tricky Turns
-  </title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
-  </script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="styles.css">
- </head>
+ <head>$1
+  <meta name="theme-color" content="#3199E4">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
  <body>
-  <div class="bg-cloud one">
-  </div>
-  <div class="bg-cloud two">
-  </div>
-  <div class="bg-cloud three">
-  </div>
-  <div class="bg-cloud four">
-  </div>
+  <div class="bg-cloud one"></div>
+  <div class="bg-cloud two"></div>
+  <div class="bg-cloud three"></div>
+  <div class="bg-cloud four"></div>
+
   <img id="muteToggleHome" src="assets/icon-unmute.svg" style="position: absolute; top: 1rem; right: 1rem; width: 32px; height: 32px; cursor: pointer; z-index: 3;">
+
   <div id="start-screen">
    <div id="user-info">
-    User:
-    <strong id="username">
-     Guest
-    </strong>
-    <button class="btn-secondary" id="loginBtn">
-     Login
-    </button>
+    User: <strong id="username">Guest</strong>
+    <button class="btn-secondary" id="loginBtn">Login</button>
    </div>
-   <div class="start-cloud one">
-   </div>
-   <div class="start-cloud two">
-   </div>
-   <div class="start-cloud three">
-   </div>
-   <div class="start-cloud four">
-   </div>
-   <h1>
-    TRICKY
-    <br/>
-    TURNS
-   </h1>
-   <button class="btn-primary" id="startBtn">
-    TAP TO START
-   </button>
-   <button class="btn-primary" id="viewLeaderboardBtn">
-    VIEW LEADERBOARD
-   </button>
+   <div class="start-cloud one"></div>
+   <div class="start-cloud two"></div>
+   <div class="start-cloud three"></div>
+   <div class="start-cloud four"></div>
+   <h1>TRICKY<br/>TURNS</h1>
+   <button class="btn-primary" id="startBtn">TAP TO START</button>
+   <button class="btn-primary" id="viewLeaderboardBtn">VIEW LEADERBOARD</button>
    <div class="orbit">
-    <div class="ring">
-    </div>
-    <div class="circle top">
-    </div>
-    <div class="circle bottom">
-    </div>
+    <div class="ring"></div>
+    <div class="circle top"></div>
+    <div class="circle bottom"></div>
    </div>
   </div>
-  <div id="leaderboard-screen">
-   <button class="btn-primary" id="closeLeaderboardBtn">
-    Close
-   </button>
-   <h2>
-    Top 100 Leaderboard
-   </h2>
-   <ol id="leaderboardEntriesHome">
-   </ol>
-  </div>
-  <div id="pause-overlay">
-   <div class="paused-text">
-    Paused
-   </div>
-  </div>
-  <div id="game-over-screen" style="flex-direction: column; align-items: center; justify-content: center; gap: 2rem; z-index: 3;">
-   <h1 style="color: #fff; font-size: 4rem;  text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.6px #0F3D75;">
-    GAME OVER
-   </h1>
-   <div class="result-wrapper">
-    <div class="orb-bg" style="display:none;">
-    </div>
-    <div class="results" style="color: #fff; font-size: 2rem;  text-align: center;text-shadow: 0 0 4px #000; text-transform: uppercase;">
-     SCORE:
-     <span id="finalScore">
-      0
-     </span>
-     <br/>
-     BEST:
-     <span id="bestScore">
-      0
-     </span>
-    </div>
-   </div>
-   
-<div id="rankMessage" style="font-size: 1.6rem;  color: #fff; text-align: center; text-shadow: 0 0 4px #000;">
-</div>
 
-  <button class="btn-primary" id="homeBtn">
-    HOME
-   </button>
+  <div id="leaderboard-screen">
+   <button class="btn-primary" id="closeLeaderboardBtn">Close</button>
+   <h2>Top 100 Leaderboard</h2>
+   <ol id="leaderboardEntriesHome"></ol>
   </div>
-  
-  <div id="fade-screen">
+
+  <div id="pause-overlay">
+   <div class="paused-text">Paused</div>
   </div>
- <script src="game.js"></script>
-</body>
+
+  <div id="game-over-screen" style="flex-direction: column; align-items: center; justify-content: center; gap: 2rem; z-index: 3;">
+   <h1 class="game-over-heading">GAME OVER</h1>
+   <div class="result-wrapper">
+    <div class="orb-bg" style="display:none;"></div>
+    <div class="results">
+     SCORE: <span id="finalScore">0</span><br/>
+     BEST: <span id="bestScore">0</span>
+    </div>
+   </div>
+   <div id="rankMessage" class="rank-message"></div>
+   <button class="btn-primary" id="homeBtn">HOME</button>
+  </div>
+
+  <div id="fade-screen"></div>
+
+  <script src="game.js" defer></script>
+ </body>
 </html>
