--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   
   <meta charset="utf-8"/>
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
+  <meta name="theme-color" content="#3199E4">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <title>
    Tricky Turns
   </title>
@@ -107,6 +109,6 @@
   
   <div id="fade-screen">
   </div>
- <script src="game.js"></script>
+ <script src="game.js" defer></script>
 </body>
 </html>
