new play again button

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
    
 <div id="rankMessage" style="font-size: 1.6rem;  color: #fff; text-align: center; text-shadow: 0 0 4px #000;">
 </div>
-
+      <!-- Play Again button -->
+  <button class="btn-primary" id="playAgainBtn">
+    PLAY AGAIN
+  </button>
+  
   <button class="btn-primary" id="homeBtn">
     HOME
    </button>
