--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <button class="btn-primary" id="closeLeaderboardBtn">
     Close
    </button>
-   <h2>
+   <h2 id="leaderboardHeader">
     Top 100 Leaderboard
    </h2>
    <ol id="leaderboardEntriesHome">
