--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
    <h2 id="leaderboardHeader">
     Top 100 Leaderboard
    </h2>
+   <div class="leaderboard-columns">
+  <span class="col-rank">#</span>
+  <span class="col-username">User</span>
+  <span class="col-score">Score</span>
+</div>
    <ol id="leaderboardEntriesHome">
    </ol>
   </div>
