--- a/index.html
+++ b/index.html
@@ -67,16 +67,15 @@
    <button class="btn-primary" id="closeLeaderboardBtn">
     Close
    </button>
-   <h2 id="leaderboardHeader">
-    Top 100 Leaderboard
-   </h2>
-   <div class="leaderboard-columns">
-  <span class="col-rank">#</span>
-  <span class="col-username">User</span>
-  <span class="col-score">Score</span>
+   <div class="leaderboard-header">
+  <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
+  <div class="leaderboard-columns">
+    <span class="col-rank"># | User</span>
+    <span class="col-score">Score</span>
+  </div>
 </div>
-   <ol id="leaderboardEntriesHome">
-   </ol>
+<ol id="leaderboardEntriesHome"></ol>
+
   </div>
   <div id="pause-overlay">
    <div class="paused-text">
