--- a/index.html
+++ b/index.html
@@ -63,17 +63,16 @@
     </div>
    </div>
   </div>
-  <div id="leaderboard-screen">
-   <button class="btn-primary" id="closeLeaderboardBtn">
-    Close
-   </button>
-   <div class="leaderboard-header">
+  <div class="leaderboard-sticky">
+  <button class="btn-primary" id="closeLeaderboardBtn">Close</button>
   <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
   <div class="leaderboard-columns">
     <span class="col-rank"># | User</span>
     <span class="col-score">Score</span>
   </div>
 </div>
+<ol id="leaderboardEntriesHome"></ol>
+
 <ol id="leaderboardEntriesHome"></ol>
 
   </div>
