--- a/index.html
+++ b/index.html
@@ -63,17 +63,20 @@
     </div>
    </div>
   </div>
-  <div class="leaderboard-sticky">
-  <button class="btn-primary" id="closeLeaderboardBtn">Close</button>
-  <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
-  <div class="leaderboard-columns">
-    <span class="col-rank"># | User</span>
-    <span class="col-score">Score</span>
+<div id="leaderboard-screen">
+  <div id="leaderboard">
+    <div class="leaderboard-sticky">
+      <button class="btn-primary" id="closeLeaderboardBtn">Close</button>
+      <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
+      <div class="leaderboard-columns">
+        <span class="col-rank"># | User</span>
+        <span class="col-score">Score</span>
+      </div>
+    </div>
+    <ol id="leaderboardEntriesHome"></ol>
   </div>
 </div>
-<ol id="leaderboardEntriesHome"></ol>
 
-<ol id="leaderboardEntriesHome"></ol>
 
   </div>
   <div id="pause-overlay">
