--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div id="leaderboard-screen">
   <div id="leaderboard">
     <div class="leaderboard-sticky">
-      <button class="btn-primary" id="closeLeaderboardBtn">Close</button>
+      <button id="closeLeaderboardBtn" aria-label="Close leaderboard">✕</button>
       <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
       <div class="leaderboard-columns">
         <span class="col-rank"># | User</span>
@@ -76,6 +76,7 @@
     <ol id="leaderboardEntriesHome"></ol>
   </div>
 </div>
+
 
 
   </div>
