--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   </div>
 
   <!-- Leaderboard -->
-  <div id="leaderboard-screen">
+<div id="leaderboard-screen">
+  <div class="leaderboard-wrapper">
     <div class="leaderboard-sticky">
       <button id="closeLeaderboardBtn" aria-label="Close leaderboard">✕</button>
       <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
@@ -52,6 +53,8 @@
     </div>
     <ol id="leaderboardEntriesHome"></ol>
   </div>
+</div>
+
 
   <!-- Pause -->
   <div id="pause-overlay">
