--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 
   <!-- Leaderboard -->
 <div id="leaderboard-screen">
+    <div class="bg-cloud one"></div>
+  <div class="bg-cloud two"></div>
+  <div class="bg-cloud three"></div>
+  <div class="bg-cloud four"></div>
   <div class="leaderboard-wrapper">
     <div class="leaderboard-sticky">
       <button id="closeLeaderboardBtn" aria-label="Close leaderboard">✕</button>
