--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
    </div>
 
-   <div id="rankMessage" style="font-size: 1.6rem; color: #fff; text-align: center; text-shadow: 0 0 4px #000;"></div>
+   <div id="rankMessage"></div>
    <button class="btn-primary" id="playAgainBtn">PLAY AGAIN</button>
    <button class="btn-primary" id="homeBtn">HOME</button>
   </div>
