--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
   <!-- Game Over -->
   <div id="game-over-screen" style="flex-direction: column; align-items: center; justify-content: center; gap: 2rem; z-index: 3;">
-   <h1 style="color: #fff; font-size: 4rem; text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.6px #0F3D75;">GAME OVER</h1>
+  <h1 class="game-over-title">GAME OVER</h1>
+
 
    <div class="result-wrapper">
     <div class="orb-bg" style="display:none;"></div>
