new countdown text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <img id="muteToggleHome" src="assets/icon-unmute.svg" style="position: absolute; top: 1rem; right: 1rem; width: 32px; height: 32px; cursor: pointer; z-index: 3;">
 
-  <div id="start-screen" style="visibility: hidden; opacity: 0;">
+  <div id="start-screen">
    <div id="user-info">
     User: <strong id="username">Guest</strong>
     <button class="btn-secondary" id="loginBtn">Login</button>
