--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <img id="muteToggleHome" src="assets/icon-unmute.svg" style="position: absolute; top: 1rem; right: 1rem; width: 32px; height: 32px; cursor: pointer; z-index: 3;">
 
   <div id="start-screen">
-   <div id="user-info">
-    User: <strong id="username">Guest</strong>
-    <button class="btn-secondary" id="loginBtn">Login</button>
-   </div>
+<div id="user-info" style="display: none;">
+  <span id="username">Guest</span>
+  <button id="loginBtn">Login</button>
+</div>
 
    <div class="start-cloud one"></div>
    <div class="start-cloud two"></div>
