--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div id="start-screen">
 <div id="user-info" style="display: none;">
   <span id="username">Guest</span>
-  <button id="loginBtn">Login</button>
+  <button id="loginBtn" class="btn-secondary">Login</button>
 </div>
 
    <div class="start-cloud one"></div>
