--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div id="start-screen">
 <div id="user-info" style="display: none;">
-  <span id="username">Guest</span>
+  <span id="username">G</span>
   <button id="loginBtn" class="btn-secondary">Login</button>
 </div>
 
