--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <img id="muteToggleHome" src="assets/icon-unmute.svg" style="position: absolute; top: 1rem; right: 1rem; width: 32px; height: 32px; cursor: pointer; z-index: 3;">
 
   <div id="start-screen">
+    <div id="auth-loading" class="loading-indicator">Authenticating...</div>
+
 <div id="user-info" style="display: none;">
   <span id="username">G</span>
   <button id="loginBtn" class="btn-secondary">Login</button>
