--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     <div id="auth-loading" class="loading-indicator">Authenticating...</div>
 
 <div id="user-info" style="display: none;">
-  <span id="username">G</span>
+  <span class="label">🔵 Pi Username:</span>
+  <span id="username">Guest</span>
   <button id="loginBtn" class="btn-secondary">Login</button>
 </div>
+
 
    <div class="start-cloud one"></div>
    <div class="start-cloud two"></div>
