--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <div id="auth-loading" class="loading-indicator">Authenticating...</div>
 
 <div id="user-info" style="display: none;">
-  <span class="label">🔵 Pi Username:</span>
-  <span id="username">Guest</span>
-  <button id="loginBtn" class="btn-secondary">Login</button>
+  <span class="label" id="auth-loading">🔄 Authenticating...</span>
+  <span class="label hidden">🔵 Pi Username:</span>
+  <span id="username" class="label hidden">Guest</span>
+  <button id="loginBtn" class="btn-secondary hidden">Login</button>
 </div>
+
 
 
    <div class="start-cloud one"></div>
