--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 
    <div class="result-wrapper">
     <div class="orb-bg" style="display:none;"></div>
-    <div class="results" style="color: #fff; font-size: 2rem; text-align: center;text-shadow: 0 0 4px #000; text-transform: uppercase;">
-     SCORE: <span id="finalScore">0</span><br/>
-     BEST: <span id="bestScore">0</span>
-    </div>
+<div class="results" id="resultsBlock">
+  <div id="bestBlock">BEST: <span id="bestScore">0</span></div>
+  <div id="scoreBlock">SCORE: <span id="finalScore">0</span></div>
+</div>
+
    </div>
 
    <div id="rankMessage"></div>
