--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <div id="game-over-screen" style="flex-direction: column; align-items: center; justify-content: center; gap: 2rem; z-index: 3;">
   <h1 class="game-over-title">GAME OVER</h1>
 
+    <div id="newHighScoreBanner" style="display: none;" class="new-high-score-banner">NEW HIGH SCORE!</div>
 
    <div class="result-wrapper">
     <div class="orb-bg" style="display:none;"></div>
