--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
   <h1 class="game-over-title">GAME OVER</h1>
 
     <div id="newHighScoreBanner" style="display: none;" class="new-high-score-banner">NEW HIGH SCORE!</div>
+    <div id="newHighScoreBlock" style="display:none; flex-direction:column; align-items:center;">
+  <div class="new-high-score-banner">NEW HIGH SCORE!</div>
+  <div class="new-high-score-number" id="newHighScoreValue"></div>
+</div>
 
    <div class="result-wrapper">
     <div class="orb-bg" style="display:none;"></div>
